# ctrl_mpexec

./: .gitignore  .pre-commit-config.yaml  COPYRIGHT  MANIFEST.in  README.md  README.rst  SConstruct  mypy.ini  pyproject.toml  requirements.txt  run_err.yaml  setup.cfg  setup.py
.github/workflows/: build.yaml  build_docs.yaml  docstyle.yaml  formatting.yaml  lint.yaml
bin.src/: cwlExecutor  cwlInit  pipetask  stac
doc/: conf.py  documenteer.toml  index.rst  manifest.yaml  requirements.txt
doc/changes/: DM-27492.feature.md  DM-28111.feature.md  DM-28649.feature.rst  DM-29384.bugfix.rst  DM-29580.bugfix.rst  DM-30702.misc.rst  DM-30977.feature.rst  DM-31583.misc.rst  DM-31691.bugfix.rst  DM-31711.bugfix.rst  DM-31769.feature.rst  DM-31884.feature.rst  DM-31966.misc.md  DM-33339.misc.md  DM-33481.feature.md  DM-33497.api.md  DM-33497.feature.md  DM-33634.feature.rst  DM-34105.feature.rst  DM-34215.feature.rst  DM-34261.bugfix.rst  DM-34420.feature.md  DM-34811.bugfix.md  DM-35396.api.rst  DM-35396.feature.rst  DM-35599.bugfix.rst  DM-35917.feature.rst  DM-36145.feature.md  DM-36162.feature.md  DM-36412.feature.rst  DM-36487.api.md  DM-36831.feature.md  DM-37140.feature.md  DM-37582.feature.rst  DM-38601.bugfix.md  DM-38779.misc.rst  DM-38780.feature.md  DM-38952.misc.md  DM-39122.doc.md  DM-39294.misc.md  (+53 more)
doc/lsst.ctrl.mpexec/: CHANGES.rst  configuring-pipetask-tasks.rst  index.rst  pipetask.rst
python/lsst/: __init__.py
python/lsst/ctrl/: __init__.py
python/lsst/ctrl/mpexec/: __init__.py  _pipeline_graph_factory.py  cmdLineFwk.py  cmdLineParser.py  coveragerc  dataid_match.py  dotTools.py  execFixupDataId.py  executionGraphFixup.py  log_capture.py  mock_task.py  mpGraphExecutor.py  preExecInit.py  quantumGraphExecutor.py  reports.py  separablePipelineExecutor.py  showInfo.py  simple_pipeline_executor.py  singleQuantumExecutor.py  taskFactory.py  taskLoader.py  util.py
python/lsst/ctrl/mpexec/cli/: __init__.py  butler_factory.py  pipetask.py  utils.py
python/lsst/ctrl/mpexec/cli/cmd/: __init__.py  commands.py  coveragerc
python/lsst/ctrl/mpexec/cli/opt/: __init__.py  arguments.py  delete.py  optionGroups.py  options.py  order_pipeline.py  pipeline.py  pipeline_dot.py  save_pipeline.py  show.py  task.py
python/lsst/ctrl/mpexec/cli/script/: __init__.py  build.py  cleanup.py  confirmable.py  pre_exec_init_qbb.py  purge.py  qgraph.py  report.py  run.py  run_qbb.py  update_graph_run.py
python/lsst/ctrl/mpexec/examples/: calexpToCoaddTask.py  make_example_qgraph.py  patchSkyMapTask.py  rawToCalexpTask.py  test1task.py  test2task.py
python/lsst/pipe/supertask/: __init__.py  cmdLineFwk.py  cmdLineParser.py  dotTools.py  taskFactory.py  taskLoader.py  util.py
python/lsst/pipe/supertask/examples/: ExampleStats.py  NewExampleCmdLineTask.py  calexpToCoaddTask.py  characterizeImage.py  exampleStorageClass.py  make_example_qgraph.py  patchSkyMapTask.py  rawToCalexpTask.py  superCalibrateTask.py  superCharacterizeImageTask.py  superIsrTask.py  test1task.py  test2task.py
tests/: SConscript  testUtil.py  test_build.py  test_cliCmd.py  test_cliCmdCleanup.py  test_cliCmdPurge.py  test_cliCmdQgraph.py  test_cliCmdReport.py  test_cliCmdRun.py  test_cliCmdUpdateGraphRun.py  test_cliOption.py  test_cliScript.py  test_cliUtils.py  test_cmdLineFwk.py  test_cmdLineParser.py  test_dataid_match.py  test_dotTools.py  test_execution_storage_class_conversion.py  test_executors.py  test_preExecInit.py  test_qgraph.py  test_reports.py  test_run.py  test_separablePipelineExecutor.py  test_simple_pipeline_executor.py  test_taskFactory.py
tests/config/: butler.yaml  metricTestRepoButler.yaml
ups/: ctrl_mpexec.table
