[metadata]
name = ctrl_mpexec
description = Pipeline execution infrastructure for the Rubin Science Pipelines
author = Rubin Observatory Data Management
url = https://github.com/lsst/resources
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  lsst_utils @ git+https://github.com/lsst/utils@main
  daf_butler @ git+https://github.com/lsst/daf_butler@main
  pex_config @ git+https://github.com/lsst/pex_config@main
  pipe_base @ git+https://github.com/lsst/pipe_base@main
  click
  astropy
  pydantic
  networkx
  psutil
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[options.package_data]
lsst.pipe.base = py.typed

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E203, W503, N802, N803, N806, N812, N815, N816
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --flake8
flake8-ignore = E203 W503 N802 N803 N806 N812 N815 N816
