[metadata]
name = lsst-ctrl-mpexec
description = Pipeline execution infrastructure for the Rubin Science Pipelines
author = Rubin Observatory Data Management
url = https://github.com/lsst/ctrl_mpexec
author_email = dm-admin@lists.lsst.org
license = GPLv3+ License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
long_description = file: README.rst
long_description_content_type = text/x-rst

keywords =
    lsst

[options]
zip_safe = True
package_dir=
    =python
packages=find:
setup_requires =
  setuptools >=46.0
install_requires =
  lsst-utils
  lsst-daf-butler
  lsst-pex-config
  lsst-pipe-base
  click
  astropy
  pydantic
  networkx
  psutil
tests_require =
  pytest >= 3.2
  flake8 >= 3.7.5
  pytest-flake8 >= 1.0.4
  pytest-openfiles >= 0.5.0

[options.packages.find]
where=python

[options.package_data]
lsst.ctrl.mpexec = py.typed

[options.entry_points]
console_scripts =
  pipetask = lsst.ctrl.mpexec.cli.pipetask:main

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E203, W503, N802, N803, N806, N812, N815, N816
exclude =
  bin,
  doc,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests

[tool:pytest]
addopts = --flake8
flake8-ignore = E203 W503 N802 N803 N806 N812 N815 N816
